# llm-pipeline

./: .gitignore  Cargo.toml  README.md
examples/: basic_pipeline.rs  context_injection.rs  mock_example.rs  payload_chain.rs  streaming_pipeline.rs  thinking_mode.rs
src/: chain.rs  client.rs  diagnostics.rs  error.rs  events.rs  exec_ctx.rs  lib.rs  llm_call.rs  output_strategy.rs  parsing.rs  payload.rs  pipeline.rs  prompt.rs  retry.rs  stage.rs  streaming.rs  types.rs
src/backend/: backoff.rs  mock.rs  mod.rs  ollama.rs  openai.rs  sse.rs
src/output_parser/: choice.rs  error.rs  extract.rs  json.rs  list.rs  mod.rs  number.rs  repair.rs  streaming.rs  text.rs  xml.rs  yaml.rs
